# simple-Kaggle-local

./: QUICKSTART.md  README.md  code.ipynb  download_dataset.py  main.py  pyproject.toml
utils/: __init__.py  config.py  data_loader.py  kaggle_api.py  kaggle_download.py  paths.py
