[project]
name = "introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ruff>=0.15.7",
    "scikit-learn>=1.7.2",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.16.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
]
